# hexlet-django-blog

./: .gitignore  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: forms.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/articles/: form.html  index.html
hexlet_django_blog/templates/: about.html  index.html
hexlet_django_blog/templates/articles/: create.html
