[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["DREU007 <dreu007@gmail.com>"]
readme = "README.md"
packages = [{include = "core"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
ipython = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
